--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "isolatedModules": true,
     "jsx": "react-jsx"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/presentation/components"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx"],
 }
