--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "@types/d3-force": "^3.0.10",
     "@types/howler": "^2.2.12",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -113,6 +114,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "d3-force": "^3.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "draft-js": "^0.11.7",
